<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:text="@string/cilindro"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:text="@string/radioCilindro"
            android:textAlignment="viewStart"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtRadio"
            android:layout_width="145dp"
            android:layout_height="60dp"
            android:ems="10"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="119dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="277dp"
            android:layout_height="wrap_content"
            android:text="@string/alturaCilindro"
            android:textAlignment="viewStart"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtAltura"
            android:layout_width="145dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1">


        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_weight="0.18"
            android:drawableRight="@drawable/cilindro"
            android:onClick="volumenCilindro"
            android:text="@string/calcular" />

    </LinearLayout>

</LinearLayout>