<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:text="@string/circulo"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:text="@string/radioCirculo"
            android:textAlignment="viewStart"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtRadio"
            android:layout_width="145dp"
            android:layout_height="60dp"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_weight="0.19"
            android:drawableRight="@drawable/circulo"
            android:onClick="aCirculo"
            android:text="@string/calcular" />

    </LinearLayout>

</LinearLayout>